2004-02-03  Dan Winship  <danw@ximian.com>

	* libsoup/soup-message-io.c (io_cleanup): Call
	soup_message_io_stop so we don't get a callback on the io after
	it's been cleaned up.

	* libsoup/soup-session.c (add_auth): Only remove the Authorization
	header if we have another one to add. (Otherwise it messes up
	SoupConnectionNTLM.)

	* libsoup/soup-socket.c (read_from_buf): Use memmove rather than
	memcpy here, since the source and destination will overlap if
	*nread is small and read_buf->len is large. (Noticed by valgrind,
	#53625.)

2004-02-02  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (soup_gnutls_close): Call gnutls_bye()
	with the GNUTLS_SHUT_WR flag (instead of RDWR) and check only for
	GNUTLS_E_INTERRUPTED.  GNUTLS_E_AGAIN will be returned by recv()
	when there are no messages on the wire on a non-blocking socket.
	This sends a SSL hangup message and then allows us to immediately
	close the socket.

2004-01-30  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in: bumped version number to 2.1.6.

2004-01-29  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch] (soup_soap_parameter_get_property):
	new function.

2004-01-29  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]
	(soup_soap_parameter_get_string_value): removed 'const' from return
	type.

2004-01-29  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (verify_certificate): Initialize the
	certificate before we try to use it.  Ahem.

2004-01-23  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump version to 2.1.5 and SOUP_RELEASE to 2

2004-01-21  Joe Shaw  <joe@ximian.com>

	* configure.in: Require at least GnuTLS 1.0.0.

	* libsoup/soup-gnutls.c: Fix the use of deprecated GnuTLS
	functions.
	(verify_certificate): Use gnutls_x509_crt_import() and
	gnutls_x509_crt_check_hostname() instead of
	gnutls_x509_check_certificates_hostname().
	(init_dh_params): Use gnutls_dh_params_generate2() instead of
	gnutls_dh_params_generate() and gnutls_dh_params_set().
